--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "php": ">=7.1",
         "guzzlehttp/guzzle": "^7.3",
-        "symfony/var-dumper": "^4.1",
+        "symfony/var-dumper": "^4.1|^5.1",
         "ext-json": "*"
     },
     "authors": [
