--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "minimum-stability": "dev",
     "license": "Apache-2.0",
     "require": {
-        "php": ">=7.1|>=8.1",
+        "php": ">=7.1||>=8.1",
         "guzzlehttp/guzzle": "^7.3",
         "symfony/var-dumper": "^4.1",
         "ext-json": "*"
